tests/ui/parser/variadic-ffi-semantic-restrictions.stderr
error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:6:19
   |
LL | fn f1_1(x: isize, ...) {}
   |                   ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:9:9
   |
LL | fn f1_2(...) {}
   |         ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:9:9
   |
LL | fn f1_2(...) {}
   |         ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:13:30
   |
LL | extern "C" fn f2_1(x: isize, ...) {}
   |                              ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:16:20
   |
LL | extern "C" fn f2_2(...) {}
   |                    ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:16:20
   |
LL | extern "C" fn f2_2(...) {}
   |                    ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:24:30
   |
LL | extern "C" fn f3_1(x: isize, ...) {}
   |                              ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:27:20
   |
LL | extern "C" fn f3_2(...) {}
   |                    ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:27:20
   |
LL | extern "C" fn f3_2(...) {}
   |                    ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:31:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:31:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:35:1
   |
LL | const unsafe extern "C" fn f4_1(x: isize, ...) {}
   | ^^^^^ `const` because of this             ^^^ C-variadic because of this

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:39:1
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   | ^^^^^ `const` because of this      ^^^ C-variadic because of this

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:39:36
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   |                                    ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:44:26
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   |                          ^^^

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:44:1
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   | ^^^^^                    ^^^            ^^^ C-variadic because of this
   | |                        |
   | |                        C-variadic because of this
   | `const` because of this

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:44:26
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   |                          ^^^            ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:50:13
   |
LL |     fn e_f1(...);
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:52:13
   |
LL |     fn e_f2(..., x: isize);
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:59:23
   |
LL |     fn i_f1(x: isize, ...) {}
   |                       ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:61:13
   |
LL |     fn i_f2(...) {}
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:61:13
   |
LL |     fn i_f2(...) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:64:13
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:64:13
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |             ^^^            ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:67:13
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:67:13
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |             ^^^            ^^^

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:70:5
   |
LL |     const fn i_f5(x: isize, ...) {}
   |     ^^^^^                   ^^^ C-variadic because of this
   |     |
   |     `const` because of this

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:70:29
   |
LL |     const fn i_f5(x: isize, ...) {}
   |                             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:77:23
   |
LL |     fn t_f1(x: isize, ...) {}
   |                       ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:79:23
   |
LL |     fn t_f2(x: isize, ...);
   |                       ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:81:13
   |
LL |     fn t_f3(...) {}
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:81:13
   |
LL |     fn t_f3(...) {}
   |             ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:84:13
   |
LL |     fn t_f4(...);
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:84:13
   |
LL |     fn t_f4(...);
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:87:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:87:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:90:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:90:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:35:43
   |
LL | const unsafe extern "C" fn f4_1(x: isize, ...) {}
   |                                           ^^^   - value is dropped here
   |                                           |
   |                                           the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:39:36
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   |                                    ^^^   - value is dropped here
   |                                    |
   |                                    the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:70:29
   |
LL |     const fn i_f5(x: isize, ...) {}
   |                             ^^^   - value is dropped here
   |                             |
   |                             the destructor for this type cannot be evaluated in constant functions

error: aborting due to 43 previous errors

For more information about this error, try `rustc --explain E0493`.
